--- a/Rewrite/res/layout/item_breadcrumb.xml
+++ b/Rewrite/res/layout/item_breadcrumb.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:orientation="horizontal"
@@ -15,8 +15,7 @@
         android:text="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:textColor="#000000"
-        android:textSize="17sp" />
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 
     <ImageView
@@ -25,5 +24,6 @@
         android:tint="@android:color/darker_gray"
         android:layout_marginHorizontal="2dp"
         android:layout_width="24dp"
-        android:layout_height="24dp" />
+        android:layout_height="24dp"
+        tools:ignore="UseAppTint" />
 </LinearLayout>
