--- a/Rewrite/res/layout/item_filebrowser_entry.xml
+++ b/Rewrite/res/layout/item_filebrowser_entry.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:gravity="center|start">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:gravity="center|start">
 
     <View
         android:id="@+id/bg_view"
@@ -60,9 +60,10 @@
             tools:ignore="RtlSymmetry">
 
             <TextView
+                android:layout_weight="1"
                 android:id="@+id/title"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:ellipsize="middle"
                 android:maxLines="2"
                 android:textAppearance="?android:attr/textAppearanceLarge"
