--- a/Rewrite/res/values/md3_colors.xml
+++ b/Rewrite/res/values/md3_colors.xml
@@ -2,19 +2,19 @@
     <color name="md_theme_primary">#4C662B</color>
     <color name="md_theme_onPrimary">#FFFFFF</color>
     <color name="md_theme_primaryContainer">#CDEDA3</color>
-    <color name="md_theme_onPrimaryContainer">#102000</color>
-    <color name="md_theme_secondary">#586249</color>
+    <color name="md_theme_onPrimaryContainer">#354E15</color>
+    <color name="md_theme_secondary">#4C662B</color>
     <color name="md_theme_onSecondary">#FFFFFF</color>
-    <color name="md_theme_secondaryContainer">#DCE7C8</color>
-    <color name="md_theme_onSecondaryContainer">#151E0B</color>
-    <color name="md_theme_tertiary">#386663</color>
+    <color name="md_theme_secondaryContainer">#CEEDA3</color>
+    <color name="md_theme_onSecondaryContainer">#364E15</color>
+    <color name="md_theme_tertiary">#006A66</color>
     <color name="md_theme_onTertiary">#FFFFFF</color>
-    <color name="md_theme_tertiaryContainer">#BCECE7</color>
-    <color name="md_theme_onTertiaryContainer">#00201E</color>
-    <color name="md_theme_error">#BA1A1A</color>
+    <color name="md_theme_tertiaryContainer">#9CF1EB</color>
+    <color name="md_theme_onTertiaryContainer">#00504D</color>
+    <color name="md_theme_error">#904A43</color>
     <color name="md_theme_onError">#FFFFFF</color>
-    <color name="md_theme_errorContainer">#FFDAD6</color>
-    <color name="md_theme_onErrorContainer">#410002</color>
+    <color name="md_theme_errorContainer">#FFDAD5</color>
+    <color name="md_theme_onErrorContainer">#73342D</color>
     <color name="md_theme_background">#F9FAEF</color>
     <color name="md_theme_onBackground">#1A1C16</color>
     <color name="md_theme_surface">#F9FAEF</color>
@@ -26,19 +26,19 @@
     <color name="md_theme_scrim">#000000</color>
     <color name="md_theme_inverseSurface">#2F312A</color>
     <color name="md_theme_inverseOnSurface">#F1F2E6</color>
-    <color name="md_theme_inversePrimary">#B1D18A</color>
+    <color name="md_theme_inversePrimary">#B2D189</color>
     <color name="md_theme_primaryFixed">#CDEDA3</color>
     <color name="md_theme_onPrimaryFixed">#102000</color>
-    <color name="md_theme_primaryFixedDim">#B1D18A</color>
-    <color name="md_theme_onPrimaryFixedVariant">#354E16</color>
-    <color name="md_theme_secondaryFixed">#DCE7C8</color>
-    <color name="md_theme_onSecondaryFixed">#151E0B</color>
-    <color name="md_theme_secondaryFixedDim">#BFCBAD</color>
-    <color name="md_theme_onSecondaryFixedVariant">#404A33</color>
-    <color name="md_theme_tertiaryFixed">#BCECE7</color>
+    <color name="md_theme_primaryFixedDim">#B2D189</color>
+    <color name="md_theme_onPrimaryFixedVariant">#354E15</color>
+    <color name="md_theme_secondaryFixed">#CEEDA3</color>
+    <color name="md_theme_onSecondaryFixed">#102000</color>
+    <color name="md_theme_secondaryFixedDim">#B2D189</color>
+    <color name="md_theme_onSecondaryFixedVariant">#364E15</color>
+    <color name="md_theme_tertiaryFixed">#9CF1EB</color>
     <color name="md_theme_onTertiaryFixed">#00201E</color>
-    <color name="md_theme_tertiaryFixedDim">#A0D0CB</color>
-    <color name="md_theme_onTertiaryFixedVariant">#1F4E4B</color>
+    <color name="md_theme_tertiaryFixedDim">#80D5CF</color>
+    <color name="md_theme_onTertiaryFixedVariant">#00504D</color>
     <color name="md_theme_surfaceDim">#DADBD0</color>
     <color name="md_theme_surfaceBright">#F9FAEF</color>
     <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
@@ -46,98 +46,98 @@
     <color name="md_theme_surfaceContainer">#EEEFE3</color>
     <color name="md_theme_surfaceContainerHigh">#E8E9DE</color>
     <color name="md_theme_surfaceContainerHighest">#E2E3D8</color>
-    <color name="md_theme_primary_mediumContrast">#314A12</color>
+    <color name="md_theme_primary_mediumContrast">#253D05</color>
     <color name="md_theme_onPrimary_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_primaryContainer_mediumContrast">#617D3F</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#5A7538</color>
     <color name="md_theme_onPrimaryContainer_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_secondary_mediumContrast">#3C462F</color>
+    <color name="md_theme_secondary_mediumContrast">#263C05</color>
     <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_secondaryContainer_mediumContrast">#6E785E</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#5B7538</color>
     <color name="md_theme_onSecondaryContainer_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_tertiary_mediumContrast">#1A4A47</color>
+    <color name="md_theme_tertiary_mediumContrast">#003D3B</color>
     <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryContainer_mediumContrast">#4F7D79</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#187975</color>
     <color name="md_theme_onTertiaryContainer_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_error_mediumContrast">#8C0009</color>
+    <color name="md_theme_error_mediumContrast">#5E231E</color>
     <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_errorContainer_mediumContrast">#DA342E</color>
+    <color name="md_theme_errorContainer_mediumContrast">#A25850</color>
     <color name="md_theme_onErrorContainer_mediumContrast">#FFFFFF</color>
     <color name="md_theme_background_mediumContrast">#F9FAEF</color>
     <color name="md_theme_onBackground_mediumContrast">#1A1C16</color>
     <color name="md_theme_surface_mediumContrast">#F9FAEF</color>
-    <color name="md_theme_onSurface_mediumContrast">#1A1C16</color>
+    <color name="md_theme_onSurface_mediumContrast">#0F120C</color>
     <color name="md_theme_surfaceVariant_mediumContrast">#E1E4D5</color>
-    <color name="md_theme_onSurfaceVariant_mediumContrast">#404439</color>
-    <color name="md_theme_outline_mediumContrast">#5D6155</color>
-    <color name="md_theme_outlineVariant_mediumContrast">#787C70</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#34382D</color>
+    <color name="md_theme_outline_mediumContrast">#505448</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#6B6F62</color>
     <color name="md_theme_scrim_mediumContrast">#000000</color>
     <color name="md_theme_inverseSurface_mediumContrast">#2F312A</color>
     <color name="md_theme_inverseOnSurface_mediumContrast">#F1F2E6</color>
-    <color name="md_theme_inversePrimary_mediumContrast">#B1D18A</color>
-    <color name="md_theme_primaryFixed_mediumContrast">#617D3F</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#B2D189</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#5A7538</color>
     <color name="md_theme_onPrimaryFixed_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_primaryFixedDim_mediumContrast">#496429</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#435C22</color>
     <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_secondaryFixed_mediumContrast">#6E785E</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#5B7538</color>
     <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_secondaryFixedDim_mediumContrast">#555F47</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#435C22</color>
     <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryFixed_mediumContrast">#4F7D79</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#187975</color>
     <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryFixedDim_mediumContrast">#366460</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#005F5C</color>
     <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_surfaceDim_mediumContrast">#DADBD0</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#C6C7BD</color>
     <color name="md_theme_surfaceBright_mediumContrast">#F9FAEF</color>
     <color name="md_theme_surfaceContainerLowest_mediumContrast">#FFFFFF</color>
     <color name="md_theme_surfaceContainerLow_mediumContrast">#F3F4E9</color>
-    <color name="md_theme_surfaceContainer_mediumContrast">#EEEFE3</color>
-    <color name="md_theme_surfaceContainerHigh_mediumContrast">#E8E9DE</color>
-    <color name="md_theme_surfaceContainerHighest_mediumContrast">#E2E3D8</color>
-    <color name="md_theme_primary_highContrast">#142700</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#E8E9DE</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#DCDED3</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#D1D2C8</color>
+    <color name="md_theme_primary_highContrast">#1C3200</color>
     <color name="md_theme_onPrimary_highContrast">#FFFFFF</color>
-    <color name="md_theme_primaryContainer_highContrast">#314A12</color>
+    <color name="md_theme_primaryContainer_highContrast">#385018</color>
     <color name="md_theme_onPrimaryContainer_highContrast">#FFFFFF</color>
-    <color name="md_theme_secondary_highContrast">#1C2511</color>
+    <color name="md_theme_secondary_highContrast">#1D3200</color>
     <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
-    <color name="md_theme_secondaryContainer_highContrast">#3C462F</color>
+    <color name="md_theme_secondaryContainer_highContrast">#385017</color>
     <color name="md_theme_onSecondaryContainer_highContrast">#FFFFFF</color>
-    <color name="md_theme_tertiary_highContrast">#002725</color>
+    <color name="md_theme_tertiary_highContrast">#003230</color>
     <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryContainer_highContrast">#1A4A47</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#00524F</color>
     <color name="md_theme_onTertiaryContainer_highContrast">#FFFFFF</color>
-    <color name="md_theme_error_highContrast">#4E0002</color>
+    <color name="md_theme_error_highContrast">#511A15</color>
     <color name="md_theme_onError_highContrast">#FFFFFF</color>
-    <color name="md_theme_errorContainer_highContrast">#8C0009</color>
+    <color name="md_theme_errorContainer_highContrast">#76362F</color>
     <color name="md_theme_onErrorContainer_highContrast">#FFFFFF</color>
     <color name="md_theme_background_highContrast">#F9FAEF</color>
     <color name="md_theme_onBackground_highContrast">#1A1C16</color>
     <color name="md_theme_surface_highContrast">#F9FAEF</color>
     <color name="md_theme_onSurface_highContrast">#000000</color>
     <color name="md_theme_surfaceVariant_highContrast">#E1E4D5</color>
-    <color name="md_theme_onSurfaceVariant_highContrast">#21251C</color>
-    <color name="md_theme_outline_highContrast">#404439</color>
-    <color name="md_theme_outlineVariant_highContrast">#404439</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#000000</color>
+    <color name="md_theme_outline_highContrast">#2A2D24</color>
+    <color name="md_theme_outlineVariant_highContrast">#474B3F</color>
     <color name="md_theme_scrim_highContrast">#000000</color>
     <color name="md_theme_inverseSurface_highContrast">#2F312A</color>
     <color name="md_theme_inverseOnSurface_highContrast">#FFFFFF</color>
-    <color name="md_theme_inversePrimary_highContrast">#D6F7AC</color>
-    <color name="md_theme_primaryFixed_highContrast">#314A12</color>
+    <color name="md_theme_inversePrimary_highContrast">#B2D189</color>
+    <color name="md_theme_primaryFixed_highContrast">#385018</color>
     <color name="md_theme_onPrimaryFixed_highContrast">#FFFFFF</color>
-    <color name="md_theme_primaryFixedDim_highContrast">#1C3300</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#223902</color>
     <color name="md_theme_onPrimaryFixedVariant_highContrast">#FFFFFF</color>
-    <color name="md_theme_secondaryFixed_highContrast">#3C462F</color>
+    <color name="md_theme_secondaryFixed_highContrast">#385017</color>
     <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
-    <color name="md_theme_secondaryFixedDim_highContrast">#26301B</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#223902</color>
     <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryFixed_highContrast">#1A4A47</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#00524F</color>
     <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryFixedDim_highContrast">#003331</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#003A37</color>
     <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
-    <color name="md_theme_surfaceDim_highContrast">#DADBD0</color>
+    <color name="md_theme_surfaceDim_highContrast">#B8BAAF</color>
     <color name="md_theme_surfaceBright_highContrast">#F9FAEF</color>
     <color name="md_theme_surfaceContainerLowest_highContrast">#FFFFFF</color>
-    <color name="md_theme_surfaceContainerLow_highContrast">#F3F4E9</color>
-    <color name="md_theme_surfaceContainer_highContrast">#EEEFE3</color>
-    <color name="md_theme_surfaceContainerHigh_highContrast">#E8E9DE</color>
-    <color name="md_theme_surfaceContainerHighest_highContrast">#E2E3D8</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#F1F2E6</color>
+    <color name="md_theme_surfaceContainer_highContrast">#E2E3D8</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#D4D5CA</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#C6C7BD</color>
 </resources>
